# rigid_body_simulation

./: .gitignore  README.md
rigid_body_core/: Cargo.toml
rigid_body_core/src/: lib.rs  main.rs
rigid_body_core/src/config/: mod.rs  test.rs
rigid_body_core/src/input/: camera_mover.rs  keyboard_state.rs  mod.rs  mouse_state.rs
rigid_body_core/src/math/: geometry.rs  matrix.rs  matrix_vector.rs  mod.rs  moment_of_inertia.rs  moment_of_intertia.rs  polyhedron.rs  quarternion.rs  rotation_matrix.rs  test.rs  triangle.rs  vector.rs
rigid_body_core/src/mesh/: mod.rs  obj_loader.rs  polyhedron_meshes.rs
rigid_body_core/src/render/: camera.rs  draw_3d.rs  mod.rs  render_object_creator.rs  screen_buffer.rs
rigid_body_core/src/simulation/: bounding_box.rs  bounding_box_collision_manager.rs  collision_manager.rs  collision_table.rs  force_manager.rs  mod.rs  ode.rs  rigid_body.rs
rigid_body_core/src/utility/: fps_manager.rs  int_hash.rs  mod.rs
rigid_body_sdl/: Cargo.toml  build.rs
rigid_body_sdl/benches/: default_benchmark.rs  my_benchmark.rs
rigid_body_sdl/src/: input.rs  lib.rs  main.rs  render.rs
rigid_body_sdl/src/config/: test.rs
rigid_body_sdl/src/input/: camera_mover.rs  key_states.rs  mod.rs  mouse_state.rs
rigid_body_sdl/src/render/: main.rs  mod.rs
rigid_body_wasm/: Cargo.toml
rigid_body_wasm/src/: input.rs  lib.rs
rigid_body_wasm/web/: index.html  index.js  package-lock.json  package.json
