[package]
name = "rigid_body_sdl"
version = "0.1.0"
authors = ["bobby"]
edition = "2018"

[dependencies]
sdl2 = "=0.34.2"
rigid_body_core = {path = "../rigid_body_core"}

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "default_benchmark"
harness = false

[features]
default = ["sdl2/bundled"]
use_sdl2_mac_framework = ["sdl2/use_mac_framework"]
