[package]
name = "rigid_body_wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.67"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
rigid_body_core = {path = "../rigid_body_core"}

[dev-dependencies]
wasm-bindgen-test = "0.3.17"

#[profile.release]
#opt-level = 3
